--- a/armonico.html
+++ b/armonico.html
@@ -61,7 +61,7 @@
                                  <a class="dx-nav-0-link" href="./chartismo.html">Chartismo</a>
                               </li>
                               <li class="dx-nav-0-item dx-nav-active">
-                                 <a class="dx-nav-0-link" href="./armonico.html">Armónico</a>
+                                 <a class="dx-nav-0-link" href="./armonico.html">Gartley</a>
                               </li>
                               <li class="dx-nav-0-item ">
                                  <a class="dx-nav-0-link" href="javascript:void(0);">Velas</a>
@@ -117,9 +117,9 @@
                <div id="scroll" class="scroll">
                   <ol id="documenter_nav">
                      <li>
-                        <a href="#documenter-1"><i class="fa fa fa-book"></i>El Chartismo</a>
+                        <a href="#documenter-1"><i class="fa fa-male"></i>Harold Gartley</a>
                       <li>
-                        <a href="#documenter-2"><i class="fa fa-expand" aria-hidden="true"></i>Tendencias</a>
+                        <a href="#documenter-2"><i class="fa fa-bars" aria-hidden="true"></i>Conceptos</a>
                         <ol>
                            <li><a href="#documenter-2-1">Directriz alcista</a></li>
                            <li><a href="#documenter-2-2">Directriz bajista</a></li>
@@ -188,19 +188,24 @@
                <div class="method-area">
                   <div class="method-copy">
                      <div style="text-align:justify" class="method-copy-padding">
-                         <h3><b>¿Qué es el chartismo?</b></h3>
+                         <h3><b>El padre del "Chartismo armonico"</b></h3><br>
                         <p>
-                           Chartismo proviene de la palabra inglesa “chart” y significa gráfico. El chartismo consiste básicamente en el estudio de los gráficos. El chartista usa los gráficos para su análisis, utiliza el precio y ningún otro instrumento. Se diferencia del analista técnico en que este último usa  más herramientas para la toma de  decisiones como por ejemplo medias móviles o indicadores. Por tanto, el chartismo es el estudio de los gráficos basándose solamente en el precio. <br><br> <b> Como norma general podemos decir que todos los analistas técnicos son chartistas, pero no todos los chartistas son analistas técnicos. </b> <br><br> 
-                           Este manual tiene como objetivo aprender a identificar y determinar los principales elementos del chartismo, veremos de manera simple y detallada que son las tendencias, los canales, los soportes, las resistencias, las principales figuras chartistas, los pullbacks y los gaps, así como su interpretación de cada una de ellas para poder tomar de decisiones de inversión.
+                          <b> Harold McKinley Gartley</b>, Nacido en 1899, a lo largo de los años fue corredor, analista de seguridad, asesor financiero, académico e investigador en todos los temas de comercio.  Su libro, <b> " Profits in the Stock Market "</b>, fue publicado en 1935 y republicado en 1981 por Lambert-Gann Pubblishing Co , por sus contribuciones al análisis técnico recibió el Premio Anual de la Asociación de Técnicos del Mercado en 1980. <br><br>
+
+                           Gartley, actualmente conocido como el padre del <b> "Chartismo armonico"</b> Tenía un servicio de asesoría bursátil a mediados de la década de 1930 con un gran número de seguidores, Este servicio fue uno de los primeros en aplicar métodos científicos y estadísticos para analizar el comportamiento del mercado de valores.<br><br>
+                           
+                           Según Gartley, finalmente pudo resolver dos de los mayores problemas de los comerciantes: qué y cuándo comprar.<br><br>
+                           
+                           Muy pronto, los comerciantes se dieron cuenta de que estos patrones también podrían aplicarse a otros mercados. Desde entonces, varios libros, software comercial y otros patrones (que se analizan a continuación) se han basado en los Patrones Gartleys. 
                          </p> 
                      </div>
                   </div>
                   <div class="method-example">
                      <div class="method-example-part">
-                           <h5>Patrones chartistas</h5>
-                           <p> <img src="fotos/chartismo/imagenes-chartistas.jpg" alt="chartimo" onclick="Zoom(this)">  </p>
+                           <h5>Harold McKinley Gartley</h5>
+                           <p> <img src="fotos/armonicos/Harold McKinley Gartley.jpg" alt="Harold McKinley Gartley" onclick="Zoom(this)">  </p>
                           <blockquote class="darker-grey">
-                             <p><a href="https://es.wikipedia.org/wiki/An%C3%A1lisis_Gr%C3%A1fico_(Chartismo)">https://es.wikipedia.org/</a>.</p>
+                             <p><a href="https://en.wikipedia.org/wiki/Harold_Hartley_(businessman)">https://es.wikipedia.org/</a>.</p>
                              <footer>Si quieres mas informacion visita esta pagina</cite></footer>
                           </blockquote>
                      </div>
