--- a/elliot.html
+++ b/elliot.html
@@ -61,7 +61,7 @@
                                  <a class="dx-nav-0-link" href="./chartismo.html">Chartismo</a>
                               </li>
                               <li class="dx-nav-0-item ">
-                                 <a class="dx-nav-0-link" href="javascript:void(0);">Armónico</a>
+                                 <a class="dx-nav-0-link" href="./armonico.html">Gartley</a>
                               </li>
                               <li class="dx-nav-0-item ">
                                  <a class="dx-nav-0-link" href="javascript:void(0);">Velas</a>
