actualizacoon patron chartista diamante

--- a/chartismo.html
+++ b/chartismo.html
@@ -111,8 +111,7 @@
             </div>
          </div>
          <!-- End header service -->
-         <!-- Sidebar --><!-- Menu lateral -->
-         <div id="documenter_sidebar">
+         <div id="documenter_sidebar"><!-- Menu lateral -->
             <div id="scrollholder" class="scrollholder">
                <div id="scroll" class="scroll">
                   <ol id="documenter_nav">
@@ -219,9 +218,7 @@
                      </div>
                   </div>
                 </div>
-   </section>
-<!-- fin del reglon completo del primer articulo -->
-<!-- inicio del segundo articulo-->
+ </section>
 <section id="documenter-2" class="method"><!-- Las Tendencias -->
     <div class="method-area">
        <div class="method-copy">
@@ -351,43 +348,42 @@
                   </div>
 </section>
 <section id="documenter-2-4" class="method"> <!--SOPORTES Y RESISTENCIAS-->
-                     <div class="method-area">
-                        <div class="method-copy">
-                           <div style="text-align:justify" class="method-copy-padding">
-                             <h3><b>Soportes y resistencias</b></h3>
-                             <p> <br>
-                              <b> Un soporte</b> se produce en el momento en que el precio para su caída en un lugar concreto dentro de una tendencia bajista. En este punto la demanda de títulos es mayor que la oferta y frena su caída. Para considerar que se ha roto el soporte tenemos que dar un margen de maniobra al precio para evitar roturas falsas. <br><br>
-                              <b>Una resistencia</b> es un nivel de cotización en que el precio tiende a pararse dentro de una tendencia alcista. Es el punto en que la oferta de títulos frena la subida y pueden iniciarse caídas en las cotizaciones. Para considerar que la resistencia ha sido rota tenemos que dar un pequeño margen de maniobra al precio ya que muchas veces se producen roturas falsas. 
-                              <br><br>
+    <div class="method-area">
+       <div class="method-copy">
+          <div style="text-align:justify" class="method-copy-padding">
+               <h3><b>Soportes y resistencias</b></h3>
+                <p> <br>
+               <b> Un soporte</b> se produce en el momento en que el precio para su caída en un lugar concreto dentro de una tendencia bajista. En este punto la demanda de títulos es mayor que la oferta y frena su caída. Para considerar que se ha roto el soporte tenemos que dar un margen de maniobra al precio para evitar roturas falsas. <br><br>
+               <b>Una resistencia</b> es un nivel de cotización en que el precio tiende a pararse dentro de una tendencia alcista. Es el punto en que la oferta de títulos frena la subida y pueden iniciarse caídas en las cotizaciones. Para considerar que la resistencia ha sido rota tenemos que dar un pequeño margen de maniobra al precio ya que muchas veces se producen roturas falsas. 
+               <br><br>
                               
-                              <b>Características comunes a los soportes y las resistencias:</b><br>
-                              <ol>
-                                 <li>Una vez han sido superadas tienden a intercambiar su papel. El soporte pasa a ser resistencia y la resistencia pasa a ser soporte.</li>
-                                 <li>Los niveles que actúan como soporte y resistencia son niveles psicológicos muy importantes para los inversores.</li>
-                                 <li>Cuanto mayor sea el número de veces que la línea frena la cotización más importante es. A partir de dos puntos de apoyo ya podemos tener un soporte o una resistencia, aunque es más recomendable tener tres puntos de contacto.</li>
-                                 <li>Es muy difícil encontrar niveles exactos, la importancia de éstos niveles la  encontramos en la zona en que se producen. Por ejemplo, el Ibex lleva mucho tiempo tocando los 10.000 puntos en tendencia alcista se considerará una resistencia aunque sus puntos de parada no sean exactamente los 10.000 puntos.</li>
-                              </ol>
-
-                                </p> 
-                       </div>
-                    </div>
-                    <div class="method-example">
-                       <div class="method-example-part">
-                             <h5>Soportes</h5>
-                             <p> <img src="fotos/chartismo/soportes.jpg" alt="Soportes y Resistencias" onclick="Zoom(this)">  </p>
-                            <blockquote class="darker-grey">
-                               <p><a href="https://es.wikipedia.org/wiki/Soporte_y_resistencia">https://es.wikipedia.org/</a>.</p>
-                               <footer>Si quieres mas informacion visita esta pagina</cite></footer>
-                            </blockquote>
-                            <h5>Resistencias</h5>
-                            <p> <img src="fotos/chartismo/resistencias.jpg" alt="Soportes y Resistencias" onclick="Zoom(this)">  </p>
-                           <blockquote class="darker-grey">
-                              <p><a href="https://es.wikipedia.org/wiki/Soporte_y_resistencia">https://es.wikipedia.org/</a>.</p>
-                              <footer>Si quieres mas informacion visita esta pagina</cite></footer>
-                           </blockquote>
-                          </div>
-                        </div>
-                     </div>
+               <b>Características comunes a los soportes y las resistencias:</b><br>
+               <ol>
+                  <li>Una vez han sido superadas tienden a intercambiar su papel. El soporte pasa a ser resistencia y la resistencia pasa a ser soporte.</li>
+                  <li>Los niveles que actúan como soporte y resistencia son niveles psicológicos muy importantes para los inversores.</li>
+                  <li>Cuanto mayor sea el número de veces que la línea frena la cotización más importante es. A partir de dos puntos de apoyo ya podemos tener un soporte o una resistencia, aunque es más recomendable tener tres puntos de contacto.</li>
+                  <li>Es muy difícil encontrar niveles exactos, la importancia de éstos niveles la  encontramos en la zona en que se producen. Por ejemplo, el Ibex lleva mucho tiempo tocando los 10.000 puntos en tendencia alcista se considerará una resistencia aunque sus puntos de parada no sean exactamente los 10.000 puntos.</li>
+               </ol>
+            </p> 
+         </div>
+        </div>
+         <div class="method-example">
+             <div class="method-example-part">
+                  <h5>Soportes</h5>
+                  <p> <img src="fotos/chartismo/soportes.jpg" alt="Soportes y Resistencias" onclick="Zoom(this)">  </p>
+                  <blockquote class="darker-grey">
+                     <p><a href="https://es.wikipedia.org/wiki/Soporte_y_resistencia">https://es.wikipedia.org/</a>.</p>
+                     <footer>Si quieres mas informacion visita esta pagina</cite></footer>
+                </blockquote>
+                  <h5>Resistencias</h5>
+                  <p> <img src="fotos/chartismo/resistencias.jpg" alt="Soportes y Resistencias" onclick="Zoom(this)">  </p>
+                <blockquote class="darker-grey">
+                  <p><a href="https://es.wikipedia.org/wiki/Soporte_y_resistencia">https://es.wikipedia.org/</a>.</p>
+                  <footer>Si quieres mas informacion visita esta pagina</cite></footer>
+               </blockquote>
+            </div>
+           </div>
+       </div>
 </section>
 <!-- fin del segundo articulo-->  
   <!-- inicio del tercer articulo-->
@@ -1155,7 +1151,7 @@
              <li>
                 <li><b>a) Forma: </b> Su estructura se basa en un triángulo abierto, seguido de un triángulo simétrico que va decreciendo poco a poco, de manera progresiva.</li>
                 <li><b>b) Volumen:</b> El volumen durante el desarrollo de este patrón es desigual, incrementándose a lo largo de la primera fase y reduciéndose durante la segunda fase.</li>  
-                <li><b>c) Tiempo de la pauta:</b> Es más habitual ver esta pauta en la recta final de una tendencia alcista, en el techo de un mercado. </b></li>
+                <li><b>c) Tiempo de la pauta:</b> Es más habitual ver esta pauta en la recta final de una tendencia alcista, en el techo de un mercado para abir la posibilidad a una tendencia bajista. </b></li>
                  
              </li>
            </p> 
@@ -1165,7 +1161,9 @@
   <div class="method-example">
      <div class="method-example-part">
            <h5>Patrón  Diamante</h5>
-           <p> <img src="fotos/chartismo/patron-cambio-diamante.jpg" alt="Patrón Alcista - Cuña Descendente" onclick="Zoom(this)">  </p>
+           <p> <img src="fotos/chartismo/patron-cambio-diamante.jpg" alt="Patrón Diamante" onclick="Zoom(this)">  </p> <br>
+           <h5>Patrón  Diamante real</h5>
+           <p> <img src="fotos/chartismo/patron-diamante.jpg" alt="Patrón Diamante" onclick="Zoom(this)">  </p>
           <blockquote class="darker-grey">
              <p><a href="https://es.wikipedia.org/wiki/An%C3%A1lisis_t%C3%A9cnico">https://es.wikipedia.org/</a>.</p>
              <footer>Si quieres mas informacion visita esta pagina</cite></footer>
