actulizacion de menu movil elliot

--- a/elliot.html
+++ b/elliot.html
@@ -1076,6 +1076,7 @@
                         <ul>
                           <li><a href="#documenter-2-1">Ciclos</a></li>
                           <li><a href="#documenter-2-2">Fibonacci</a></li>
+                          <li><a href="#documenter-2-3">Alternancia</a></li>
                         </ul>
                       </li>
                       <li><a href="#documenter-3"><i class="fa fa fa-book"></i>Enfoque fractal</a>
