actualizacion de  elliot, cambio de fuente

--- a/patrones-elliot.html
+++ b/patrones-elliot.html
@@ -136,7 +136,7 @@
                       </li>
                      <li><a href="./elliot.html"><i class="fa fa-male"></i>Volver a Elliot</a>
                   </ol>
-                  <!-- Widget BEGIN -->
+                  <!-- Widget BEGIN
                   <script type="text/javascript">
                      baseUrl = "https://widgets.cryptocompare.com/";
                      var scripts = document.getElementsByTagName("script");
@@ -153,7 +153,7 @@
                      })();
                      </script>
    
-                     <!-- Widget END -->
+                     Widget END -->
                </div>
             </div>
          </div>
