--- a/elliot.html
+++ b/elliot.html
@@ -115,15 +115,15 @@
             <div id="scrollholder" class="scrollholder">
                <div id="scroll" class="scroll">
                   <ol id="documenter_nav">
-                     <li> <a href="#documenter-1"><i class="fa fa-male"></i>Ralph Elliott</a></li>
-                     <li><a href="#documenter-2"><i class="fa fa-bars"></i>Conceptos</a>
+                     <li> <a href="#documenter-1"><i class="fa fa-user-circle" aria-hidden="true"></i>Ralph Elliott</a></li>
+                     <li><a href="#documenter-2"><i class="fa fa-file-text" aria-hidden="true"></i>Conceptos</a>
                         <ol>
                           <li><a href="#documenter-2-1">Ciclos</a></li>
                           <li><a href="#documenter-2-2">Fibonacci</a></li>
                         </ol>
                       </li>
                       
-                      <li><a href="#documenter-3"><i class="fa fa-bullhorn" aria-hidden="true"></i>Reglas</a>
+                      <li><a href="#documenter-3"><i class="fa fa-university" aria-hidden="true"></i>Reglas</a>
                         <ol>
                           <li><a href="#documenter-3-1">Reglas elementales</a></li>
                           <li><a href="#documenter-3-2">Regla de la extensión</a></li>
@@ -132,7 +132,7 @@
                           <li><a href="#documenter-3-5">Regla del solape</a></li>
                         </ol>
                       </li>
-                      <li><a href="#documenter-4"><i class="fa fa-qrcode" aria-hidden="true"></i>Enfoque fractal</a>
+                      <li><a href="#documenter-4"><i class="fa fa-puzzle-piece" aria-hidden="true"></i>Enfoque fractal</a>
                         <ol>
                            <li><a href="#documenter-4-1">Objetos</a></li>
                            <li><a href="#documenter-4-2">Escalamiento</a></li>
